static/css/style_drink.css
body {
    background-color: #a3a1a1;
}

.icon {
    filter: invert(100%); 
  }

.footer {
    position: sticky;
    bottom: 0;
    /* color: #fff; */
    width: 100%;
    margin-bottom: 0;
    margin: 0 auto;
    justify-content: center;
    padding: 0;
    opacity: 100%;
    background: #b84e4e;
    /* color: #3d3c3c; */
}

.footer .col-lg-8 {
    border: 0;
}

.card-text {
    font: rgb(45, 45, 45);
    font-size: 0.7rem;
}

a {
    text-decoration: none;
}

